--- a/src/pages/CardList/style.scss
+++ b/src/pages/CardList/style.scss
@@ -1,10 +1,12 @@
 @import '../../common/navbar.scss';
 
 .container {
-    position: relative;
+    
+    width: 90%;
+    margin-left: 4.45%;
     
     display: grid;
-    grid-template-columns: 150px 150px;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 200px 200px 200px;
     grid-template-areas:
         'profile counter'
