--- a/src/pages/CardList/style.scss
+++ b/src/pages/CardList/style.scss
@@ -1,10 +1,13 @@
 @import '../../common/navbar.scss';
 
+.container-wrapper {
+width: 100%;
+display: flex;
+justify-content: center;
+}
+
 .container {
-    
-    width: 90%;
-    margin-left: 4.45%;
-    
+    width: 90vw;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 200px 200px 200px;
@@ -20,14 +23,13 @@
     grid-area: profile;
     background: linear-gradient(140.79deg, #E66833 0%, #DC3636 48.53%, #FA9468 100%);
 
-    // display: flex;
-    // flex-direction: column;
+    display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
 
-    img {
-        padding-top: 10px;
-    }
+    padding-top: 10px;
+    padding-bottom: 10px;
 
     .username {
         font-size: 19px;
