--- a/src/pages/CardList/style.scss
+++ b/src/pages/CardList/style.scss
@@ -9,7 +9,7 @@ justify-content: center;
 .container {
     width: 90vw;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: auto auto;
     grid-template-rows: 200px 200px 200px;
     grid-template-areas:
         'profile counter'
