h2 instead of annotation

--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -3,7 +3,7 @@
 .full_profile {
     // meh
     width: calc(100% - 50px);
-    height: 300px;
+    // height: 300px;
     margin: 25px;
     margin-top: 5px;
     background: linear-gradient(140.79deg, #E66833 0%, #DC3636 48.53%, #FA9468 100%);
