make HackaPage style modularized

--- a/src/pages/HackaPage/style.module.scss
+++ b/src/pages/HackaPage/style.module.scss
@@ -1,8 +1,8 @@
-@import '../../common/navbar.scss';
+// @import '../../common/navbar.scss';
 
 // TODO: make this a module scss
 
-.list2 {
+.list {
     width: 90%;
     height: 250px;
 
