can enable/disable menu

--- a/src/pages/CardList/icon.scss
+++ b/src/pages/CardList/icon.scss
@@ -3,6 +3,7 @@
     position: relative;
 
     .count {
+        // direto do figma
         position: absolute;
         left: 19.42%;
         right: 19.42%;
