--- a/src/common/global.scss
+++ b/src/common/global.scss
@@ -7,22 +7,12 @@ body {
 }
 
 h1, h2,
-span {
+span, li, a {
     font-family: Fira Code, monospace;
     font-style: normal;
     font-weight: normal;
 }
-a {
-    font-family: Fira Code, monospace;
-    font-style: normal;
-    font-weight: normal;
 
-    font-size: 12px;
-    line-height: 16px;
-    text-decoration-line: underline;
-
-    color: #6D6D6D;
-}
 
 .card {
     background: #f5f5f5;
