--- a/src/components/Menu/style.module.scss
+++ b/src/components/Menu/style.module.scss
@@ -7,4 +7,26 @@
     background-color: white;
     box-shadow: 100px 0px 250px rgba(0, 0, 0, 0.59);
     border-radius: 0px 0px 250px 0px;
+
+    h1 {
+        font-size: 48px;
+        line-height: 64px;
+        text-align: center;
+    }
+
+    li {
+        list-style-type: none;
+        font-size: 24px;
+        line-height: 32px;
+        margin: 8px;
+    }
+
+    a {
+        text-decoration-line: none;
+        
+        &:visited {
+            // not needed if we specify the color
+            color: black;
+        }
+    }
 }
