--- a/src/pages/CardList/style.scss
+++ b/src/pages/CardList/style.scss
@@ -113,6 +113,12 @@ justify-content: center;
     }
 
     a {
+        font-size: 12px;
+        line-height: 16px;
+        text-decoration-line: underline;
+    
+        color: #6D6D6D;
+
         grid-area: link;
         text-align: right;
         padding-right: 20px;
