--- a/src/common/global.scss
+++ b/src/common/global.scss
@@ -4,6 +4,8 @@ body {
     background: linear-gradient(180deg, #525252 0%, #868686 100%);
     margin: 0px;
     padding: 0px;
+    height: 100vh;
+    width: 100vw;
 }
 
 h1, h2,
@@ -12,7 +14,6 @@ span, li, a {
     font-style: normal;
     font-weight: normal;
 }
-
 
 .card {
     background: #f5f5f5;
