--- a/src/pages/Profile/style.module.scss
+++ b/src/pages/Profile/style.module.scss
@@ -1,8 +1,23 @@
 .full_profile {
-
     width: 90vw;
-    // height: 300px;
     margin: 25px;
     margin-top: 5px;
     background: linear-gradient(140.79deg, #E66833 0%, #DC3636 48.53%, #FA9468 100%);
+
+    text-align: center;
+    color: white;
+
+    .empty {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        height: 150px;
+
+        span {
+            font-size: 19px;
+            line-height: 25px;
+            color: rgba(0, 0, 0, 0.25);
+        }
+    }
 }
