add margin to profile pic and comment out some things
mas não tá acabado

socorro

--- a/src/pages/Profile/style.module.scss
+++ b/src/pages/Profile/style.module.scss
@@ -7,6 +7,10 @@
     text-align: center;
     color: white;
 
+    h2 {
+        color: black;
+    }
+
     .empty {
         display: flex;
         align-items: center;
