--- a/src/components/BoxDialog/style.module.scss
+++ b/src/components/BoxDialog/style.module.scss
@@ -36,7 +36,13 @@ h2 {
 .saveButton {
     width: 75px;
     height: 75px;
+    border: none;
+    border-radius: 50px;
 
     background: linear-gradient(135.42deg, #E66833 0%, #DC3636 48.44%, #FA9468 100%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    span {
+        color: white;
+    }
 }
