--- a/src/pages/HackaPage/style.module.scss
+++ b/src/pages/HackaPage/style.module.scss
@@ -1,6 +1,6 @@
 .list {
     width: 90%;
-    height: 250px;
+    min-height: 250px;
 
     margin: 20px;
     
@@ -16,4 +16,12 @@
         line-height: 25px;
         color: rgba(0, 0, 0, 0.25);
     }
+}
+
+ul {
+    margin: 20px;
+}
+
+li {
+    list-style: none;
 }
