--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     display: flex;
     justify-content: center;
@@ -7,7 +7,7 @@ footer {
     width: 100%;
     height: 2em;
 
-    z-index: 1;
+    z-index: 3;
     background-color: rgba(0, 0, 0, 0.5);
 
     font-size: 10pt;
